--- a/Front/commodities.html
+++ b/Front/commodities.html
@@ -9,7 +9,7 @@
           <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="site.css">
     </head>
-<body>
+<body class="corpo">
     <!-- ----------------------Menu ------------------------- -->
 <nav id = "nb" class="navbar navbar-default" >
   <div id = "container-navbar" class="container-fluid">
@@ -26,8 +26,8 @@
     </div>
    <div class="collapse navbar-collapse" id="myNavbar">
     <ul class="nav navbar-nav navbar-left">
-        <li class="active"><a href="home.html">Home</a></li>
-       <li class="dropdown"><a href="commodities.html">Commodities<span class="caret"></span></a>
+        <li><a href="home.html">Home</a></li>
+       <li class="dropdown active"><a href="commodities.html">Commodities<span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="#">Boi Gordo</a></li>
           <li><a href="#">Café Arabica 4/5</a></li>
@@ -44,43 +44,23 @@
     </div>
   </div>
 </nav>
-    <!-- ----------------------Carrosel ------------------------- -->
-     <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner">
-      <div class="item active">
-        <img src="Imagens/banner1.png" alt="Los Angeles" style="width:100%;">
-      </div>
-
-      <div class="item">
-        <img src="Imagens/banner1.png" alt="Chicago" style="width:100%;">
-      </div>
-    
-      <div class="item">
-        <img src="Imagens/banner1.png" alt="New york" style="width:100%;">
-      </div>
+     <!-- --------------------------Intro -------------------------- -->
+    <div class="intro">
+        <div class="row">
+            <div class="col-sm-3">
+                <h1>Commodities</h1>
+                <p> Commodities são todas as matérias-primas essenciais que possuem baixo nível de industrialização. Elas são produzidas em grande quantidade sem diferenças entre marcas e podem ser estocadas sem perda de qualidade como o petróleo, o trigo, o milho, buebfwehfhoene ESCREVER UM TEXTO DE INTRODUÇÃO SOBRE COMMODITIESAAAAAAAAAAAAAAAAAAAAAAAAA </p>
+            </div>
+            <div class="col-sm-9 " style="padding: 15px 0 0 60px; ">
+                <h3>Ajuste do Pregão</h3>
+                <p> Nos mercados futuros, os ajustes são feitos diariamente, ou seja, se você compra e a cotação sobe no dia, no dia seguinte terá um crédito na conta e se o preço cair terá um débito e assim sendo diariamente ajustado. Caso opere na venda o processo é o mesmo, se cair no dia seguinte recebe crédito e se subir débito. Por ser um mercado alavancado o risco de um investidor ter grandes prejuízos é eminente, por isso a bolsa realiza os ajustes diários, pois caso o participante não tenha condições de honrar algum eventual débito será compulsoriamente zerado por sua corretora, garantindo assim que todas as operações em bolsa sejam devidamente liquidadas. No final do dia a bolsa divulga o preço de ajuste de cada contrato, esse preço geralmente é a média dos preços negociados no fechamento do pregão. COLOCAR UM TEXTO SOBRE O AJUSTE DO PREGÃO MELHOR AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA </p>
+            </div>
+        
+        </div>
     </div>
-
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
     <!-- --------------------------Commodities -------------------------- -->
-    <div class="container-commo" >
-        <h2>Commodities</h2>
+    <div class="container-page-commodities" >
+        <h1>Ajuste do Pregão Diário</h1>
         <div class="row">
             <div class="col-sm-3 square">
                 <a href="boi.html">
@@ -122,10 +102,6 @@
                 </a>
             </div>
         </div>
-    </div>
-       <!-- --------------------------Graphics -------------------------- -->
-    <div class="container-graphi">
-        <h2>Graphics</h2>
     </div>
 </body>
 </html
