Front is almost already

--- a/Front/home.html
+++ b/Front/home.html
@@ -29,10 +29,10 @@
         <li class="active"><a href="home.html">Home</a></li>
        <li class="dropdown"><a href="commodities.html">Commodities<span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="#">Boi Gordo</a></li>
-          <li><a href="#">Café Arabica 4/5</a></li>
-          <li><a href="#">Milho</a></li>
-            <li><a href="#">Soja</a></li>
+           <li><a href="boi.html">Boi Gordo</a></li>
+          <li><a href="cafe.html">Café Arabica 4/5</a></li>
+          <li><a href="milho.html">Milho</a></li>
+            <li><a href="soja.html">Soja</a></li>
         </ul>
         <li><a href="analytics.html">Analytics</a></li>
         <li><a href="graphic.html">Graphics</a></li>
