add html boi, cafe and soja

--- a/Front/soja.html
+++ b/Front/soja.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
     <head>
-        <title>CPA-Milho</title>
+        <title>CPA-Soja</title>
           <meta charset="utf-8">
           <meta name="viewport" content="width=device-width, initial-scale=1">
           <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -47,7 +47,7 @@
      <!-- --------------------------Header -------------------------- -->
     <div class="header-Img">
         <img src="Imagens/milhoBanner.jpeg" style="opacity: 0.5; width: 100%">
-            <h1 class="commo-name">Milho</h1>
+            <h1 class="commo-name">Soja</h1>
     </div>
     <!-- --------------------------Milho -------------------------- -->
     <div class="container-prod" >
@@ -62,11 +62,11 @@
         </div>
         <div id="collapseOne" class="panel-collapse collapse in">
           <div class="panel-body">
-            O milho é usado pela indústria para produzir diversos produtos como o óleo vegetal, o farelo, a farinha, o fubá e o creme para o setor alimentício.
+                A produção de soja atende a uma cadeia de diversos produtos acabados derivados do farelo e do óleo provenientes do processamento do grão, ambos insumos para a cadeia de alimento animal, saúde, uso industrial e a produção de biodiesel.
               <br>
-            Como a produção de milho no Brasil conta com diferentes vários locais de cultivo, a produção garante a oferta em boa parte do ano. No entanto, a grande parte das negociações acontece nos períodos de safra e entressafra.
+                O período de safra de colheita da soja, historicamente, é percebido entre os meses de janeiro a junho. Já a entressafra, no segundo semestre do ano, quando normalmente se observa uma baixa oferta de grãos ao mercado.
               <br>
-            O contrato foi desenvolvido com o objetivo de ser uma ferramenta para a gestão do risco de oscilação de preço, sendo utilizado pelos participantes do mercado, como o produtor, a indústria, tradings, dentre outros.
+                O contrato foi desenvolvido com o objetivo de ser uma ferramenta para a gestão do risco de oscilação de preço, sendo utilizado pelos participantes do mercado, como o produtor, a indústria, tradings, dentre outros.
           </div>
         </div>
       </div>
@@ -83,11 +83,11 @@
             <table id="infoTable">
                 <tr>
                     <td><b>Objeto de negociação</b> </td>
-                    <td>Milho em grão a granel, com odor e aspectos normais, duro ou semiduro e amarelo.</td>
+                    <td>Soja em grão a granel tipo exportação, com os seguintes limites máximos: 14% de umidade; 1% de matérias estranhas e impurezas; 30% de quebrados; 8% de esverdeados; 8% de avariados, dos quais se permite até 6% de grãos mofados, até 4% de grãos ardidos e queimados, sendo que esse último não pode ultrapassar 1%; e 18,5% de conteúdo de óleo.</td>
                 </tr>
                 <tr>
                     <td><b>Código de negociação</b> </td>
-                    <td>CCM</td>
+                    <td>SFI</td>
                 </tr>
                 <tr>
                     <td><b>Tamanho do contrato</b> </td>
@@ -95,11 +95,11 @@
                 </tr>
                 <tr>
                     <td><b>Cotação</b> </td>
-                    <td>Reais por saca, com duas casas decimais.</td>
+                    <td>Dólares dos Estados Unidos por saca, com duas casas decimais..</td>
                 </tr>
                 <tr>
                     <td><b>Variação mínima de apregoação</b> </td>
-                    <td>R$0,01</td>
+                    <td>US$0,01.</td>
                 </tr>
                 <tr>
                     <td><b>Lote padrão</b> </td>
@@ -107,15 +107,15 @@
                 </tr>
                 <tr>
                     <td><b>Último dia de negociação</b> </td>
-                    <td>Dia 15 do mês de vencimento.</td>
+                    <td>2º dia útil anterior ao mês de vencimento.</td>
                 </tr>
                 <tr>
                     <td><b>Data de vencimento</b> </td>
-                    <td>Dia 15 do mês de vencimento. Caso não haja sessão de negociação, a data de vencimento será a próxima sessão de negociação.</td>
+                    <td>2º dia útil anterior ao mês de vencimento.</td>
                 </tr>
                 <tr>
                     <td><b>Meses de vencimento</b> </td>
-                    <td>Janeiro, março, maio, julho, agosto, setembro e novembro.</td>
+                    <td>Março, abril, maio, junho, julho, agosto, setembro e novembro.</td>
                 </tr>
                 <tr>
                     <td><b>Liquidação no vencimento</b> </td>
