--- a/Front/boi.html
+++ b/Front/boi.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
     <head>
-        <title>CPA-Milho</title>
+        <title>CPA-Boi</title>
           <meta charset="utf-8">
           <meta name="viewport" content="width=device-width, initial-scale=1">
           <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -47,7 +47,7 @@
      <!-- --------------------------Header -------------------------- -->
     <div class="header-Img">
         <img src="Imagens/milhoBanner.jpeg" style="opacity: 0.5; width: 100%">
-            <h1 class="commo-name">Milho</h1>
+            <h1 class="commo-name">Boi Gordo</h1>
     </div>
     <!-- --------------------------Milho -------------------------- -->
     <div class="container-prod" >
@@ -62,11 +62,11 @@
         </div>
         <div id="collapseOne" class="panel-collapse collapse in">
           <div class="panel-body">
-            O milho é usado pela indústria para produzir diversos produtos como o óleo vegetal, o farelo, a farinha, o fubá e o creme para o setor alimentício.
+             O Boi Gordo, atualmente, é uma das principais commodities do país devido ao fato do Brasil ser um dos maiores exportadores de carne bovina do mundo.
               <br>
-            Como a produção de milho no Brasil conta com diferentes vários locais de cultivo, a produção garante a oferta em boa parte do ano. No entanto, a grande parte das negociações acontece nos períodos de safra e entressafra.
+              Com o intuito de evitar as oscilações dos preços, o participante pode determinar o preço do boi antecipadamente. O confinador, por exemplo, irá adquirir, em maio, bois magros para engordá-los e vendê-los em outubro. Para evitar os riscos de oscilações de preços há a possibilidade de garantir o preço por meio do mercado futuro.
               <br>
-            O contrato foi desenvolvido com o objetivo de ser uma ferramenta para a gestão do risco de oscilação de preço, sendo utilizado pelos participantes do mercado, como o produtor, a indústria, tradings, dentre outros.
+           O contrato foi desenvolvido com o objetivo de ser uma ferramenta para a gestão do risco de oscilação de preço, sendo utilizado pelos participantes do mercado, como o produtor, empresas de corte, tradings, dentre outros.
           </div>
         </div>
       </div>
@@ -83,23 +83,23 @@
             <table id="infoTable">
                 <tr>
                     <td><b>Objeto de negociação</b> </td>
-                    <td>Milho em grão a granel, com odor e aspectos normais, duro ou semiduro e amarelo.</td>
+                    <td>Bovinos machos, com 16 arrobas líquidas ou mais de carcaça e idade máxima de 42 meses.</td>
                 </tr>
                 <tr>
                     <td><b>Código de negociação</b> </td>
-                    <td>CCM</td>
+                    <td>BGI</td>
                 </tr>
                 <tr>
                     <td><b>Tamanho do contrato</b> </td>
-                    <td>450 sacas de 60kg líquidos (equivalentes a 27 toneladas métricas).</td>
+                    <td>330 arrobas líquidas.</td>
                 </tr>
                 <tr>
                     <td><b>Cotação</b> </td>
-                    <td>Reais por saca, com duas casas decimais.</td>
+                    <td>Reais por arroba líquida, com duas casas decimais.</td>
                 </tr>
                 <tr>
                     <td><b>Variação mínima de apregoação</b> </td>
-                    <td>R$0,01</td>
+                    <td>R$ 0,05.</td>
                 </tr>
                 <tr>
                     <td><b>Lote padrão</b> </td>
@@ -107,15 +107,15 @@
                 </tr>
                 <tr>
                     <td><b>Último dia de negociação</b> </td>
-                    <td>Dia 15 do mês de vencimento.</td>
+                    <td>Última sessão de negociação do mês de vencimento do contrato.</td>
                 </tr>
                 <tr>
                     <td><b>Data de vencimento</b> </td>
-                    <td>Dia 15 do mês de vencimento. Caso não haja sessão de negociação, a data de vencimento será a próxima sessão de negociação.</td>
+                    <td>Última sessão de negociação do mês de vencimento do contrato.</td>
                 </tr>
                 <tr>
                     <td><b>Meses de vencimento</b> </td>
-                    <td>Janeiro, março, maio, julho, agosto, setembro e novembro.</td>
+                    <td>Todos os meses.</td>
                 </tr>
                 <tr>
                     <td><b>Liquidação no vencimento</b> </td>
