--- a/Front/cafe.html
+++ b/Front/cafe.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
     <head>
-        <title>CPA-Milho</title>
+        <title>CPA-Cafe</title>
           <meta charset="utf-8">
           <meta name="viewport" content="width=device-width, initial-scale=1">
           <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -47,7 +47,7 @@
      <!-- --------------------------Header -------------------------- -->
     <div class="header-Img">
         <img src="Imagens/milhoBanner.jpeg" style="opacity: 0.5; width: 100%">
-            <h1 class="commo-name">Milho</h1>
+            <h1 class="commo-name">Café</h1>
     </div>
     <!-- --------------------------Milho -------------------------- -->
     <div class="container-prod" >
@@ -62,11 +62,11 @@
         </div>
         <div id="collapseOne" class="panel-collapse collapse in">
           <div class="panel-body">
-            O milho é usado pela indústria para produzir diversos produtos como o óleo vegetal, o farelo, a farinha, o fubá e o creme para o setor alimentício.
+            O café é uma commodity mundialmente consumida e a produção brasileira, já que o país é um dos maiores produtores e exportadores e tem grande relevância no mercado nacional e internacional, em especial do grão arábica.
               <br>
-            Como a produção de milho no Brasil conta com diferentes vários locais de cultivo, a produção garante a oferta em boa parte do ano. No entanto, a grande parte das negociações acontece nos períodos de safra e entressafra.
+           O contrato foi desenvolvido com o objetivo de ser uma ferramenta para a gestão do risco de oscilação de preço, sendo utilizado pelos participantes do mercado, como o produtor, a indústria, tradings, dentre outros.
               <br>
-            O contrato foi desenvolvido com o objetivo de ser uma ferramenta para a gestão do risco de oscilação de preço, sendo utilizado pelos participantes do mercado, como o produtor, a indústria, tradings, dentre outros.
+            Além disso, esse contrato pode ser liquidado financeiramente antes do vencimento ou no vencimento, por meio da entrega física da mercadoria nos armazéns cadastrados junto a B3. No caso de entrega em localidade diferente do Município de São Paulo, haverá dedução do custo de frete para apuração do valor de liquidação.
           </div>
         </div>
       </div>
@@ -83,23 +83,23 @@
             <table id="infoTable">
                 <tr>
                     <td><b>Objeto de negociação</b> </td>
-                    <td>Milho em grão a granel, com odor e aspectos normais, duro ou semiduro e amarelo.</td>
+                    <td>Café cru, em grão, de produção brasileira, coffea arabica, tipo 4-25 (4/5) ou melhor, bebida dura ou melhor, para entrega no Município de São Paulo, SP, Brasil.</td>
                 </tr>
                 <tr>
                     <td><b>Código de negociação</b> </td>
-                    <td>CCM</td>
+                    <td>ICF</td>
                 </tr>
                 <tr>
                     <td><b>Tamanho do contrato</b> </td>
-                    <td>450 sacas de 60kg líquidos (equivalentes a 27 toneladas métricas).</td>
+                    <td>100 sacas de 60kg líquidos (equivalentes a 6 toneladas métricas).</td>
                 </tr>
                 <tr>
                     <td><b>Cotação</b> </td>
-                    <td>Reais por saca, com duas casas decimais.</td>
+                    <td>Dólares dos Estados Unidos por saca, com duas casas decimais.</td>
                 </tr>
                 <tr>
                     <td><b>Variação mínima de apregoação</b> </td>
-                    <td>R$0,01</td>
+                    <td>US$0,05.</td>
                 </tr>
                 <tr>
                     <td><b>Lote padrão</b> </td>
@@ -107,19 +107,19 @@
                 </tr>
                 <tr>
                     <td><b>Último dia de negociação</b> </td>
-                    <td>Dia 15 do mês de vencimento.</td>
+                    <td>6º dia útil anterior ao último dia útil do mês do vencimento.</td>
                 </tr>
                 <tr>
                     <td><b>Data de vencimento</b> </td>
-                    <td>Dia 15 do mês de vencimento. Caso não haja sessão de negociação, a data de vencimento será a próxima sessão de negociação.</td>
+                    <td>6º dia útil anterior ao último dia útil do mês do vencimento. Caso não haja sessão de negociação, a data de vencimento será a próxima sessão de negociação.</td>
                 </tr>
                 <tr>
                     <td><b>Meses de vencimento</b> </td>
-                    <td>Janeiro, março, maio, julho, agosto, setembro e novembro.</td>
+                    <td>Março, maio, julho, setembro e dezembro.</td>
                 </tr>
                 <tr>
                     <td><b>Liquidação no vencimento</b> </td>
-                    <td>Financeira.</td>
+                    <td>Física.</td>
                 </tr>
             </table>
           </div>
