--- a/Front/cafe.html
+++ b/Front/cafe.html
@@ -30,8 +30,8 @@
        <li class="dropdown active"><a href="commodities.html">Commodities<span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="boi.html">Boi Gordo</a></li>
-          <li><a href="cafe.html">Café Arabica 4/5</a></li>
-          <li><a class="active" href="milho.html">Milho</a></li>
+          <li><a class="active" href="cafe.html">Café Arabica 4/5</a></li>
+          <li><a href="milho.html">Milho</a></li>
             <li><a href="soja.html">Soja</a></li>
         </ul>
         <li><a href="analytics.html">Analytics</a></li>
@@ -46,7 +46,7 @@
 </nav>
      <!-- --------------------------Header -------------------------- -->
     <div class="header-Img">
-        <img src="Imagens/milhoBanner.jpeg" style="opacity: 0.5; width: 100%">
+        <img src="Imagens/cafeBanner.png" style=" width: 100%">
             <h1 class="commo-name">Café</h1>
     </div>
     <!-- --------------------------Milho -------------------------- -->
