--- a/Front/milho.html
+++ b/Front/milho.html
@@ -46,7 +46,7 @@
 </nav>
      <!-- --------------------------Header -------------------------- -->
     <div class="header-Img">
-        <img src="Imagens/milhoBanner.jpeg" style="opacity: 0.5; width: 100%">
+        <img src="Imagens/milhoBanner.png" style=" width: 100%">
             <h1 class="commo-name">Milho</h1>
     </div>
     <!-- --------------------------Milho -------------------------- -->
